#43 fixes button alignment and removes icon following @njsfield advice

--- a/public/css/form.css
+++ b/public/css/form.css
@@ -87,8 +87,10 @@ form >p{
   padding:0.5rem 1rem;
 }
 
-.purp {
+.confirm {
   background-color: #632c7a;
+  display: block;
+  margin: 0 auto;
 }
 
 .input-field{
